# genaiops-promptflow-template

./: pyproject.toml
.github/requirements/: build_validation_requirements.txt  execute_job_requirements.txt
.github/workflows/: build_validation_workflow.yml  named_entity_recognition_post_prod_eval.yml  platform_ci_dev_workflow.yml  unit_test_pr.yml
llmops/common/: prompt_eval.py  prompt_pipeline.py
math_coding/: experiment.yaml
named_entity_recognition/configs/: deployment_config.json
